--- a/Compiled-HTML/pages/3_pages/index.html
+++ b/Compiled-HTML/pages/3_pages/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title></head><body> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/sass/2_pages/style.css"><title>Pages_3</title></head><body>   <nav> <div> <img src="/img/3/left.png" alt=""></div><div>        <h3>CN</h3><h3>EN</h3><img src="/img/3/right.png" alt=""></div></nav></body></html>
