--- a/Compiled-HTML/pages/3_pages/index.html
+++ b/Compiled-HTML/pages/3_pages/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/sass/3_pages/style.css">
-    <title>Document</title>
-</head>
-
-<body> </body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/sass/3_pages/style.css"><title>Document</title></head><body> <nav> <div class="navleft"><img src="/img/3/left.png" alt=""></div><div class="navright"><img src="/img/3/CN.png" alt=""><img src="/img/3/EN.png" alt=""><img src="/img/3/right.png" alt=""></div></nav><main> <div class="meincha"><h1 class="ondenight">One nightowl is coding really hard</h1><div class="cominson" style="display: grid;"> <img src="/img/3/COMING SOON.png" alt=""></div><img class="bigpicture" src="/img/3/Group 2.png" alt=""><div class="btn"><h3>Get Notifed</h3><button>Send</button></div></div><div>    <img src="" alt=""></div></main></body></html>
