--- a/pages/Tailwinds Start/6_pages.html
+++ b/pages/Tailwinds Start/6_pages.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
+    <style>
+        main {
+            display: none;
+        }
+    </style>
 </head>
-<body>
-    
+
+<body class="bg-[url('/img/6/web_06.png')] h-[1024px]">
+    <main>
+
+        <img src="/img/5/Rectangle 1.png" alt="">
+
+
+        <div class="content">
+            <h2>Trinity 43rd Avenue LLC</h2>
+
+            <div>
+                <div>
+                    <img class="thanks" src="/img/5/Thanks, John!.png" alt="">
+
+                    <p class="tp">Here is your receipt for your rent payment for the month of July. Below are the
+                        details. </p>
+
+                </div>
+                <div class="needgrid">
+                    <img src="/img/5/Date.png" alt="">
+                    <img src="/img/5/огту.png" alt="">
+                    <img src="/img/5/total.png" alt="">
+                    <img src="/img/5/1200.png" alt="">
+                </div>
+            </div>
+            <p>Questions? Contact us at (206) 121-456 or email us at trinityapartment@43st.com </p>
+        </div>
+    </main>
 </body>
+
 </html>
