--- a/pages/Tailwinds Start/7_pages.html
+++ b/pages/Tailwinds Start/7_pages.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
 </head>
-<body>
-    
+
+<body class="overflow-hidden">
+    <main>
+        <img src="/img/7/Frame 962.png" alt="" class="w-[720px] relative">
+        <div class="relative top-[-998px] left-[860px]">
+            <nav class="flex w-max gap-10 text-[20px] font-semibold">
+                <h4>SHOP</h4>
+                <h4>ABOUT</h4>
+                <h4>INNOVATION</h4>
+                <h4>LOGIN</h4>
+                <h4>CART</h4>
+            </nav>
+            <div class="mt-[280px]">
+                <div class="grid gap-[40px]">
+                    <div class="flex w-max gap-2 ml-6">
+                        <img src="/img/7/ANTI.png" alt="">
+                        <img src="/img/7/DESIGN.png" alt="">
+                    </div>
+                    <p class="w-[503px] text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Libero in
+                        mauris est condimentum suscipit. Viverra tincidunt amet aliquet massa rhoncus egestas eget id
+                        turpis. Augue nunc. </p>
+
+                </div>
+                <img src="/img/7/Frame 968.png" alt="" class="mt-[165px]">
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
