err fixed and 8_pages finished

--- a/pages/Tailwinds Start/8_pages.html
+++ b/pages/Tailwinds Start/8_pages.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
+    <style>
+        div{
+            background-image: url(/img/8/web_08.png);
+            width: 100%;
+            background-position: center;
+            background-size: cover;
+            height: 1024px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div>
+    </div>
 </body>
 </html>
