--- a/pages/Tailwinds Start/10_pages.html
+++ b/pages/Tailwinds Start/10_pages.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
 </head>
-<body class="pt-5">
-    <img src="/img/9/Menu.png" alt="" class="ml-[1380px] w-[100px]">
 
-    <img src="/img/9/Frame 970.png" alt="" class="mt-24 ml-24" width="1000px">
+<body>
 
-    <div>
-        <img src="/img/9/Scroll.png" alt="" class="ml-24 w-[100px] mt-[200px] absolute">
-        <img src="/img/9/superwoman 1.png" alt="" class="ml-[960px] mt-[-50px]">
-    </div>
 </body>
+
 </html>
