--- a/pages/Tailwinds Start/9_pages.html
+++ b/pages/Tailwinds Start/9_pages.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,14 @@
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="pt-5">
+    <img src="/img/9/Menu.png" alt="" class="ml-[1380px] w-[100px]">
+
+    <img src="/img/9/Frame 970.png" alt="" class="mt-24 ml-24" width="1000px">
+
+    <div>
+        <img src="/img/9/Scroll.png" alt="" class="ml-24 w-[100px] mt-[200px] absolute">
+        <img src="/img/9/superwoman 1.png" alt="" class="ml-[960px] mt-[-50px]">
+    </div>
 </body>
 </html>
