--- a/pages/Tailwinds Start/10_pages.html
+++ b/pages/Tailwinds Start/10_pages.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/output.css">
     <title>Document</title>
+    <style>
+        body{
+            background-image: url(/img/10/web_10.png);
+            width: 1440px;
+            height: 1024px;
+            overflow: hidden;
+            background-position: center;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
-
+<!-- NIMA QILE IMKONINI TOPOMADIM -->
 </body>
 
 </html>
